More tests and fixes based on review comments